--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 	<canvas id="c1"></canvas>
 	<canvas id="c2"></canvas>
 	<div class="htmleaf-header">
-		<h2><a  href="#">你值得拥有真正的快乐</a> </h2>
         <h2><a  href="#">What hurts more,the pain of hard work or the pain of regret?</a> </h2>
         <br></br>
         <br></br>
         <span>常用网站</span>
 	    
-			<a  href="http://www.hao8090.com/" title="8090" target="_blank"><span> 8090网址导航</span></a>
+			<a  href="http://www.hao8090.com/" title="8090" target="_blank"><span> 8090导航</span></a>
             <a  href="http://www.baidu.com/" title="百度一下" target="_blank"><span> 百度</span></a>
             <a  href="http://http://www.google.cn/" title="谷歌" target="_blank"><span> 谷歌</span></a>
 			<a  href="http://www.sina.com.cn/" title="新浪" target="_blank"><span> 新浪</span></a>
@@ -28,7 +27,7 @@
         <br></br>
         <span>音乐、电影</span>
      
-			<a  href="http://www.6vhao.com/" title="最新电影电视" target="_blank"><span> 电影电视剧下载</span></a>
+			<a  href="http://www.6vhao.com/" title="最新电影电视" target="_blank"><span> 影视下载</span></a>
             <a  href="http://music.163.com/" title="网易音乐" target="_blank"><span> 网易音乐</span></a>
             <a  href="http://www.xiami.com/" title="虾米音乐" target="_blank"><span> 虾米音乐</span></a>
             <a  href="https://y.qq.com/" title="QQ音乐" target="_blank"><span> QQ音乐</span></a>
@@ -36,8 +35,10 @@
 	
          <br></br>
          <br></br>
-        <span>淘宝店</span>
+        <span>购物</span>
 		     <a  href="http://www.taobao.com/" title="淘宝" target="_blank"><span> 淘宝</span></a> 
+             <a  href="https://www.jd.com/" title="京东" target="_blank"><span> 京东</span></a> 
+             <a  href="http://www.suning.com/" title="苏宁" target="_blank"><span> 苏宁</span></a> 
 			<a  href="https://kmxzts.tmall.com/?spm=a220o.1000855.1997427721.d4918089.l21s9x" title="新知图书" target="_blank"><span> 书店</span></a>
             <a  href="https://shop151944808.taobao.com/shop/view_shop.htm?spm=a1z0k.6846577.0.0.tH8mVr&shop_id=151944808" title="hahaha" target="_blank"><span> 好衣库</span></a>	
 	</div>
