--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
     	function search(){
 			window.open("http://www.baidu.com/s?wd="+document.getElementById("search").value);
 			}
+			document.onkeydown=function(event){
+            var e = event || window.event || arguments.callee.caller.arguments[0];           
+             if(e && e.keyCode==13){ // enter 键
+                 //要做的事情
+				 search();
+            }
+        }; 
     </script>
 </body>
 </html>
